deploy: c56810a62eaef4cb53ff27b0cd05fbfb2d2fb77d

--- a/creative-scala.css
+++ b/creative-scala.css
@@ -599,6 +599,10 @@ li.level2 {
   color: rgb(203 213 225 / var(--tw-text-opacity));
 }
 
+.default-image-block {
+  margin: 1rem;
+}
+
 #content {
   flex: 1 1 auto;
   padding: 3rem;
