deploy: 05e8cf7c4c37a51017b0e3a48f4ade974ce5b816

--- a/creative-scala.css
+++ b/creative-scala.css
@@ -602,6 +602,8 @@ li.level2 {
 .default-image-block {
   clear: both;
   margin: 1rem;
+  grid-column-start: main-start;
+  grid-column-end: main-end;
 }
 
 #content {
