deploy: 6ac3b09aee4599a83262ed45152f135b406ab4fa

--- a/creative-scala.css
+++ b/creative-scala.css
@@ -107,7 +107,7 @@
 }
 
 /*
-! tailwindcss v3.4.16 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.17 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -552,6 +552,10 @@ video {
 
 [hidden]:where(:not([hidden="until-found"])) {
   display: none;
+}
+
+.table {
+  display: table;
 }
 
 body {
